# check_logmultiline

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: args.rs  args.yml  logfile.rs  main.rs  state.rs
tests/: args.rs
tests/resources/: a.log.1
